--- a/config/server2.properties
+++ b/config/server2.properties
@@ -31,8 +31,8 @@ host.name=vkc-br2
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
-#advertised.host.name=10.30.3.20
-advertised.host.name=vkc-br2
+advertised.host.name=10.30.3.20
+#advertised.host.name=vkc-br2
 
 # The port to publish to ZooKeeper for clients to use. If this is not set,
 # it will publish the same port that the broker binds to.
