--- a/config/server3.properties
+++ b/config/server3.properties
@@ -31,8 +31,8 @@ host.name=vkc-br3
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
-#advertised.host.name=10.30.3.10
-advertised.host.name=vkc-br3
+advertised.host.name=10.30.3.10
+#advertised.host.name=vkc-br3
 
 # The port to publish to ZooKeeper for clients to use. If this is not set,
 # it will publish the same port that the broker binds to.
